docs(runbook): 각 명령에 옵션 설명 주석 추가
Python 사용자가 명령을 그대로 이해할 수 있도록, 실행을 깨지지 않게
유지하면서 옵션 설명을 보강한다.

- spark-submit/spark-sql는 `\` 줄잇기라 인라인 주석이 실행을 깨므로
  코드 블록 아래 "각 옵션 설명" 목록으로 풀이
- mkdir/head/rm/ls/sed 등 단일 줄 명령엔 인라인 한국어 주석
- 결과 블록의 컬럼 의미(week_start·count) 주석

Refs: docs/runbook/sample-e2e.md
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>